Squash a bug

--- a/src/styles/Characters.scss
+++ b/src/styles/Characters.scss
@@ -28,14 +28,14 @@
 }
 
 .Tsumi {
-  height: 150px;
-  width: 150px;
+  height: 200px;
+  width: 200px;
 
   display: flex;
   align-items: center;
   justify-content: center;
   img {
-    height: 150px;
+    height: 200px;
   }
 }
 
